--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body bgcolor=gray>
+<body bgcolor=white>
 <center>
-<h2><font color=yellow>Hello world</font></h2>
+<h2><font color=red>Hello world</font></h2>
 
 <font color=magenta>www.google.com</font>
 
