--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body bgcolor=white>
 <center>
 <h2><font color=red>Hello world</font></h2>
-Jenkins lessons!<br>
+Jenkins lessons1!<br>
 <font color=magenta>www.google.com</font>
 
 </center>
