--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor=blue>
 <center>
-<h2><font color=red>Hello world from Jenkins!</font></h2>
+<h2><font color=red>Hello world from Jenkins UI!</font></h2>
 Jenkins lesson!<br>
 <font color=magenta>www.google.com</font>
 
